Next Button : Functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
             android:layout_marginEnd="16dp"
             android:text="@string/next"
             android:textAllCaps="false"
+            android:onClick="nextMeme"
             />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
